--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -29,6 +29,7 @@ ext {
     nimbusVersion = "5.7"
     runnerVersion = "1.2.0"
     rulesVersion = "1.2.0"
+    robolectricVersion = "4.0"
 
     // TODO: adal automation test app.
     supportLibraryVersion = "27.1.+"
